--- a/404.html
+++ b/404.html
@@ -6,10 +6,11 @@
   <base href="/adaept/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" sizes="16x16 32x32" href="/favicon.ico?v=2">
+  <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
   
 </head>
 <body>
   <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.b52d2076048963e7cbfd.bundle.js"></script><script type="text/javascript" src="main.516fe4c7dd7a825150cf.bundle.js"></script></body>
+<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.b52d2076048963e7cbfd.bundle.js"></script><script type="text/javascript" src="main.165b472415ac39668596.bundle.js"></script></body>
 </html>
