--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" sizes="16x16 32x32" href="/favicon.ico?v=2">
+  <link rel="icon" sizes="16x16 32x32" href="favicon.ico?v=2">
   <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
   
 </head>
