--- a/404.html
+++ b/404.html
@@ -6,8 +6,9 @@
   <base href="/adaept/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" sizes="16x16 32x32" href="favicon.ico?v=2">
-  <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
+  <link rel="icon" href="https://adaept.github.io/adaept/favicon.ico">
+  <!-- <link rel="icon" sizes="16x16 32x32" href="favicon.ico?v=2">
+       <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
   
 </head>
 <body>
