--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>Adaept</title>
-  <base href="/">
+  <base href="/adaept/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="https://adaept.github.io/adaept/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- <link rel="icon" sizes="16x16 32x32" href="favicon.ico?v=2">
        <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
   
